--- a/styling.css
+++ b/styling.css
@@ -5,10 +5,14 @@
     background-color: lightgray;
     padding: 20px;
     font-size: 20px;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+
 }
 
 .content {
-	padding: 20px;
+    padding: 20px;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+
 }
 
 .footer {
@@ -34,6 +38,8 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+
 }
 
 /* Change the color of links on hover */
